@@ -75,7 +75,7 @@ int yahoo_tcp_readline(char *ptr, int maxlen, int fd)
 
 		do {
 			rc = read(fd, &c, 1);
-		} while(rc == -1 && errno == EINTR);
+		} while(rc == -1 && (errno == EINTR || errno == EAGAIN)); /* this is bad - it should be done asynchronously */
 
 		if (rc == 1) {
 			if(c == '\r')			/* get rid of \r */
@@ -362,6 +362,7 @@ static void yahoo_got_url_fd(int id, int fd, int error, void *data)
 	char buff[1024];
 	unsigned long filesize=0;
 	char *filename=NULL;
+	int n;
 
 	struct url_data *ud = data;
 
@@ -371,8 +372,8 @@ static void yahoo_got_url_fd(int id, int fd, int error, void *data)
 		return;
 	}
 
-	while(yahoo_tcp_readline(buff, sizeof(buff), fd) > 0) {
-		/* read up to blank line */
+	while((n=yahoo_tcp_readline(buff, sizeof(buff), fd)) > 0) {
+		LOG(("Read:%s:\n", buff));
 		if(!strcmp(buff, ""))
 			break;
 
@@ -410,6 +411,8 @@ static void yahoo_got_url_fd(int id, int fd, int error, void *data)
 		}
 	}
 
+	LOG(("n == %d\n", n));
+	LOG(("Calling callback, filename:%s, size: %ld\n", filename, filesize));
 	ud->callback(id, fd, error, filename, filesize, ud->user_data);
 	FREE(ud);
 	FREE(filename);
